--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  workflow:
+  e2e_mlops_workflow:
     runs-on: ubuntu-latest
 
     steps:
@@ -60,3 +60,19 @@ jobs:
           docker stop mlflow-server
           docker rm mlflow-server
           docker rmi ghcr.io/mlflow/mlflow:latest || true
+        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: surajsingh16/fastapi:{{ github.sha }}
+          context: "."
+          file: "Dockerfile"
